fixing z-index

--- a/js-14-0/style.css
+++ b/js-14-0/style.css
@@ -32,7 +32,7 @@ input[ type = range ]::-moz-range-thumb { background-color: rgb(228, 225, 225); 
 input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
 main { border: 0px; height: 100%; left: var( --mnu-width ); margin: 0; /* overflow: hidden; */
-	position: absolute; width: calc(100% - var( --mnu-width ) );  z-index: -1; }
+	position: absolute; width: calc(100% - var( --mnu-width ) );  }
 
 summary { cursor: pointer; font-size: 1rem; font-weight: bold; outline: none; }
 
@@ -47,7 +47,7 @@ summary { cursor: pointer; font-size: 1rem; font-weight: bold; outline: none; }
 
 
 #navPanel { background: #fafafa; height: 100%; left: 0px; overflow: auto; position: fixed;
-	width: var( --mnu-width ); }
+	width: var( --mnu-width ); z-index: 1; }
 
 #navPanel section { padding: 0px 8px 20px 20px; }
 
